samples/_failures_safe/1761325514_a9c71f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d5d9391.c: In function ‘main’:
./samples/SAFE/__tmp_5d5d9391.c:173:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  173 |     for (int k
      |     ^~~
./samples/SAFE/__tmp_5d5d9391.c:173:5: error: expected declaration or statement at end of input
